--- a/README
+++ b/README
@@ -23,7 +23,8 @@ The xattrs are listed for each FS, below.
 
 Known Bugs:
 =idedosfs=
-*	Writing isn't supported yet.
+*	If you try to truncate() a partition, idedosfs will pretend it succeeded (because otherwise open(..., O_TRUNC) fails which is a pain)
+*	There's no mechanism for notifying users if the partition is changed - and flock() doesn't save you because there's more than one hardlink to each partition.  idedosfs needs to have its own flock() method that locks all the hardlinks to the partition.
 =plus3dosfs=
 *	Files which span more than one extent aren't handled currently; only data in the first extent can be read.
 *	The offset for the start of the data isn't being calculated (because I don't know how); it's just grovelling the partition until it finds some data.
