--- a/README
+++ b/README
@@ -26,6 +26,5 @@ Known Bugs:
 *	If you try to truncate() a partition, idedosfs will pretend it succeeded (because otherwise open(..., O_TRUNC) fails which is a pain)
 *	There's no mechanism for notifying users if the partition is changed - and flock() doesn't save you because there's more than one hardlink to each partition.  idedosfs needs to have its own flock() method that locks all the hardlinks to the partition.
 =plus3dosfs=
-*	File creation isn't supported yet, nor extending the length of an existing file
-*	truncate() is buggy in peculiar ways, so it's currently just pretending
+*	File creation isn't supported yet
 *	It is assumed (incorrectly) that the first extent of a file has extent number 0.  This can break with sparse files.
