--- a/README
+++ b/README
@@ -26,5 +26,6 @@ Known Bugs:
 *	If you try to truncate() a partition, idedosfs will pretend it succeeded (because otherwise open(..., O_TRUNC) fails which is a pain)
 *	There's no mechanism for notifying users if the partition is changed - and flock() doesn't save you because there's more than one hardlink to each partition.  idedosfs needs to have its own flock() method that locks all the hardlinks to the partition.
 =plus3dosfs=
-*	File creation isn't supported yet
+*	write() may silently fail to write out data in an ENOSPC condition (if disk_alloc or extent_alloc fails)
+*	There are some bugs in file extending, particularly noticeable with unheadered files, which lead to cut-and-shut files
 *	It is assumed (incorrectly) that the first extent of a file has extent number 0.  This can break with sparse files.
