--- a/README
+++ b/README
@@ -28,4 +28,5 @@ Known Bugs:
 *	There's no mechanism for notifying users if the partition is changed - and flock() doesn't save you because there's more than one hardlink to each partition.  idedosfs needs to have its own flock() method that locks all the hardlinks to the partition.
 =plus3dosfs=
 *	write() may silently fail to write out data in an ENOSPC condition (if disk_alloc or extent_alloc fails)
+*	Trying to cpx a file with headers will fail as cp writes the data first then tries to set the xattrs.  At present you can't headerify a nonempty file with setxattr()
 *	It is assumed (incorrectly) that the first extent of a file has extent number 0.  This can break with sparse files.
